test/functions/resolution/errors/testBadCallCandidates.2-all.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:79: error: unresolved call 'owned D.foo("hi")'
testBadCallCandidates.chpl:5: note: this candidate did not match: C.foo(x: string)
testBadCallCandidates.chpl:79: note: because method call receiver with type 'owned D'
testBadCallCandidates.chpl:4: note: is passed to formal 'this: borrowed C'
testBadCallCandidates.chpl:79: note: other candidates are:
testBadCallCandidates.chpl:33: note:   D.foo(x: C)
testBadCallCandidates.chpl:59: note:   foo(x: C)
testBadCallCandidates.chpl:62: note:   foo(x: D)
